# Tideflow-md-to-pdf

./: .eslintignore  .gitattributes  ANALYSIS.md  CHANGES.md  CODEBASE_ANALYSIS.md  HAT_TRICK_COMPLETE.md  NOTICE  README.md  REFACTORING_PLAN.md  RENDERING_SYSTEM_ANALYSIS.md  SCROLL_SYNC_REFACTOR_PLAN.md  build-quiet.bat  build-quiet.ps1  designspec.md  eslint.config.js  font-test-demo.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  quarto-mock.bat  quarto.bat  sample.md  test-cmarker.typ  test-font.md  test-simple.typ  test-tideflow.js  tsconfig.app.json  vite.config.ts
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
content/: .gitkeep
content/.build/: .gitkeep
docs/: PDF_RENDERING_OPTIMIZATION.md  RERENDER_OPTIMIZATION.md  TODO.md
src/: App.css  App.tsx  api.ts  instructionsDoc.ts  main.tsx  store.ts  themes.ts  types.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/content/: _prefs.json  _quarto.yml  instructions.md  sample.qmd  test-font-access.typ  theme-showcase.md  tideflow.typ
src-tauri/content/themes/: academic.typ  classic.typ  colorful.typ  compact.typ  creative.typ  dark.typ  default.typ  elegant.typ  journal.typ  magazine.typ  minimal.typ  modern.typ  notebook.typ  registry.typ  serif.typ  technical.typ
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  file_watcher.rs  incremental.rs  lib.rs  main.rs  preferences.rs  preloader.rs  preprocessor.rs  render_pipeline.rs  renderer.rs  utils.rs
src-tauri/src/commands/: cache_ops.rs  debug_ops.rs  file_ops.rs  font_ops.rs  image_ops.rs  mod.rs  pdf_ops.rs  render_ops.rs
src-tauri/src/utils/: filesystem.rs  initialization.rs  logger.rs  mod.rs  paths.rs  typst.rs
src-tauri/styles/: default.typ
src-tauri/templates/: article.md  memo.md  report-cover.qmd  sample.md
src-web/: App.css  App.tsx  api.ts  index.css  instructionsDoc.ts  sampleDoc.ts  themes.ts  types.ts
src-web/components/: DesignModal.tsx  Editor.css  Editor.tsx  EditorToolbar.tsx  FileBrowser.css  FileBrowser.tsx  ImagePlusModal.tsx  ImagePropsModal.tsx  KeyboardShortcutsModal.tsx  PDFPreview.css  PDFPreview.tsx  PDFPreviewHeader.tsx  SearchModal.tsx  SearchWidget.css  SearchWidget.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx  ToastContainer.tsx  Toolbar.css  Toolbar.tsx
src-web/components/DesignModal/: AdvancedTab.css  PresetsTab.tsx  SpacingTab.tsx  ThemesTab.css  ThemesTab.tsx  TypographyTab.tsx  types.ts
src-web/components/PDFPreview/: ErrorDisplay.tsx  PDFViewer.tsx  ThumbnailsSidebar.tsx  index.ts  pdfWorker.ts  types.ts
src-web/components/commands/: blocks.ts  images.ts
src-web/constants/: timing.ts
src-web/hooks/: useAnchorManagement.ts  useAppInitialization.ts  useCodeMirrorSetup.ts  useDragToScroll.ts  useEditorState.ts  useEditorToPdfSync.ts  useFileOperations.ts  useOffsetManager.ts  usePdfToEditorSync.ts  useScrollState.ts  useWindowManagement.ts
src-web/stores/: editorStore.ts  fontStore.ts  uiStore.ts
src-web/utils/: image.ts  logger.ts  pdfRenderer.ts  scrollGuards.ts  scrubAnchors.ts
src/components/: DesignModal.css  DesignModal.tsx  Editor.css  Editor.tsx  EditorToolbar.tsx  ErrorBoundary.css  ErrorBoundary.tsx  FileTree.css  FileTree.tsx  ImagePlusModal.tsx  ImagePropsModal.tsx  MarkdownCommands.ts  MarkdownToolbar.css  MarkdownToolbar.ts  MarkdownToolbar.tsx  PDFErrorBoundary.css  PDFErrorBoundary.tsx  PDFPreview.css  PDFPreview.tsx  PDFPreviewHeader.tsx  PrefsModal.css  PrefsModal.tsx  SearchModal.tsx  SearchWidget.css  SearchWidget.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  Toast.css  Toast.tsx  ToastContainer.tsx  Toolbar.css  Toolbar.tsx
src/components/DesignModal/: AdvancedTab.tsx  DocumentTab.tsx  ImagesTab.tsx  StructureTab.tsx  ThemesTab.tsx  index.ts  (+1 more)
src/constants/: timing.ts
src/hooks/: useAnchorManagement.ts  useAnchorSync.ts  useAppInitialization.ts  useCodeMirrorSetup.ts  useContentManagement.ts  useDocumentLifecycle.ts  useEditorLifecycle.ts  useEditorState.ts  useEditorSync.ts  useEditorToPdfSync.ts  useFileOperations.ts  useFinalSync.ts  useImageHandlers.ts  useOffsetManager.ts  usePdfRenderer.ts  usePdfSync.ts  usePdfToEditorSync.ts  usePendingScroll.ts  usePreviewEvents.ts  useScrollState.ts  useStartupSync.ts  useWindowManagement.ts
src/stores/: editorStore.ts  preferencesStore.ts  uiStore.ts
src/styles/: design-modal.css  variables.css
src/types/: codemirror.ts
src/utils/: errorHandler.ts  logger.ts  offsets.ts  pdfRenderer.ts  scrollMapping.ts  scrubAnchors.ts  session.ts
test/: test-document.md
(+8 files in other folders)
