[package]
name = "tideflow"
version = "1.1.0"
description = "Markdown to PDF editor with real-time preview"
authors = ["Tideflow Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tideflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.3.2"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-shell = "2"
uuid = { version = "1.3", features = ["v4", "serde"] }
regex = "1.8"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
base64 = "0.21"
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }

[profile.release]
# Reduce codegen units to 1 and enable LTO for smaller, faster release builds.
# These settings apply only to `--release` builds and won't affect developer dev builds.
codegen-units = 1
lto = true
