[package]
  authors      = ["Tideflow Team"]
  description  = "Markdown to PDF editor with real-time preview"
  edition      = "2021"
  license      = "MIT"
  name         = "tideflow"
  repository   = ""
  rust-version = "1.77.2"
  version      = "1.1.1"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  crate-type = ["staticlib", "cdylib", "rlib"]
  name       = "tideflow_lib"

[build-dependencies]
  tauri-build = {features = [], version = "2.3.1"}

[dependencies]
  anyhow              = "1.0"
  base64              = "0.21"
  chrono              = {features = ["serde"], version = "0.4"}
  futures             = "0.3"
  image               = "0.24"
  lazy_static         = "1.4.0"
  log                 = "0.4"
  pulldown-cmark      = {default-features = false, features = ["simd"], version = "0.9"}
  regex               = "1.8"
  serde               = {features = ["derive"], version = "1.0"}
  serde_json          = "1.0"
  tauri               = {features = ["protocol-asset"], version = "2.7.0"}
  tauri-plugin-dialog = "2.3.2"
  tauri-plugin-log    = "2.3.2"
  tauri-plugin-shell  = "2"
  thiserror           = "1.0"
  tokio               = {features = ["full"], version = "1.28"}
  uuid                = {features = ["v4", "serde"], version = "1.3"}
  walkdir             = "2.3"

[profile.release]
  # Reduce codegen units to 1 and enable LTO for smaller, faster release builds.
  # These settings apply only to `--release` builds and won't affect developer dev builds.
  codegen-units = 1
  lto           = true
